--- a/starter/sagemaker.ipynb
+++ b/starter/sagemaker.ipynb
@@ -12,13 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "# TODO: Install any packages that you might need"
+    "# TODO: Install any packages that you might need\n",
+    "import json"
    ]
   },
   {
@@ -88,11 +89,64 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "with open('file_list.json', 'r') as f:\n",
+    "    d=json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['1', '2', '3', '4', '5'])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1228\n",
+      "2299\n",
+      "2666\n",
+      "2373\n",
+      "1875\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in d.keys():\n",
+    "    print(len(d[i]))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO: Upload the data to AWS S3"
+    "#TODO: Upload the data to AWS S3\n"
    ]
   },
   {
@@ -321,7 +375,7 @@
  "metadata": {
   "instance_type": "ml.g4dn.xlarge",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -335,7 +389,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
